# pyannote-whisper

./: pyproject.toml
