[project]
name = "pyannote-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy<2",
    "openai-whisper>=20240930",
    "pyannote-audio>=3.3.0",
    "soundfile>=0.13.1",
    "speechbrain==0.5.16",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
